--- a/package.json
+++ b/package.json
@@ -8,10 +8,22 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@thirdweb-dev/react": "^4.9.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "browserify-zlib": "^0.2.0",
+    "stream-browserify": "^3.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "util": "^0.12.5",
+    "assert": "^2.1.0",
+    "stream-http": "^3.2.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "url": "^0.11.3",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
   },
   "scripts": {
     "start": "react-scripts start",
